[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Amruta and this is my first webapp.
-            wasssssupppppp i m so dumb
+            Hi! I am Amruta and this is my first webapp...
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
